# gemini-ocr-cli

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
gemini_ocr/: __init__.py  __main__.py  cli.py  config.py  metadata.py  processor.py  retry.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_import.py  test_integration.py  test_metadata.py  test_processor.py  test_utils.py
